--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
   </head>
   <body>
     <header>
+      <nav class="hammenu">
+        <div class="hammenu_icon">
+          <div class="hammenu_icon_hover"><span></span><span></span><span></span><span></span><span></span></div>
+        </div>
+        <div class="hammenu_back">
+          <div class="hammenu_back_screen">
+            <nav class="menucontent">
+              <ul>
+                <li>All Posts</li>
+                <li>Category</li>
+                <li>About</li>
+                <li>
+                  <form method="get" action="http://www.google.co.jp/search" target="_blank">
+                    <input class="search_window" value="" type="text"/>
+                    <input class="secrch_icon" name="btng" value="" type="submit"/>
+                    <input name="hl" value="ja" type="hidden"/>
+                  </form>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </nav>
       <div class="headerwrap"><img src="material/rbhugram.svg"/>
         <nav class="headerwrap_menu">
           <ul>
@@ -46,6 +69,43 @@
             </div>
             <div class="newpost_view_img"><img src="material/image_12.jpg"/></div>
           </div>
+        </div>
+      </div>
+      <div class="oldposts">
+        <div class="oldposts_post">
+          <div class="oldposts_post_title">
+            <h1>学校課題作品「積乱雲」</h1>
+            <hr/>
+          </div>
+          <div class="oldposts_post_image"><img src="material/image_7.jpg"/></div>
+        </div>
+        <div class="oldposts_post">
+          <div class="oldposts_post_title">
+            <h1>“Architecture Anomalies”ダニエル・アーシャム展示会webサイト制作課題</h1>
+            <hr/>
+          </div>
+          <div class="oldposts_post_image"><img src="material/image_2.jpg"/></div>
+        </div>
+        <div class="oldposts_post">
+          <div class="oldposts_post_title">
+            <h1>ROCK IN JAPAN 2018サイトリニューアル課題</h1>
+            <hr/>
+          </div>
+          <div class="oldposts_post_image"><img src="material/image_3.jpg"/></div>
+        </div>
+        <div class="oldposts_post">
+          <div class="oldposts_post_title">
+            <h1>学校課題作品「積乱雲」</h1>
+            <hr/>
+          </div>
+          <div class="oldposts_post_image"><img src="material/image_4.jpg"/></div>
+        </div>
+        <div class="oldposts_post">
+          <div class="oldposts_post_title">
+            <h1>学校課題作品「積乱雲」</h1>
+            <hr/>
+          </div>
+          <div class="oldposts_post_image"><img src="material/image_5.jpg"/></div>
         </div>
       </div>
     </main>
