--- a/index.html
+++ b/index.html
@@ -15,27 +15,26 @@
   </head>
   <body>
     <header>
-      <nav class="hammenu">
-        <div class="hammenu_icon">
+      <nav class="hammenu" id="hambutton">
+        <div class="hammenu_icon" v-on:click="hamburger">
           <div class="hammenu_icon_hover"><span></span><span></span><span></span><span></span><span></span></div>
         </div>
-        <div class="hammenu_back">
-          <div class="hammenu_back_screen">
-            <nav class="menucontent">
-              <ul>
-                <li>All Posts</li>
-                <li>Category</li>
-                <li>About</li>
-                <li>
-                  <form method="get" action="http://www.google.co.jp/search" target="_blank">
-                    <input class="search_window" value="" type="text"/>
-                    <input class="secrch_icon" name="btng" value="" type="submit"/>
-                    <input name="hl" value="ja" type="hidden"/>
-                  </form>
-                </li>
-              </ul>
-            </nav>
-          </div>
+        <div class="hammenu_back" v-bind:style="{backgroundColor:bgcolor, zIndex:layer0}">
+          <div class="hammenu_back_screen" v-on:click="bgScreen"></div>
+          <nav class="menucontent" v-bind:style="{transform:movement, zIndex:layer1}">
+            <ul>
+              <li>All Posts</li>
+              <li>Category</li>
+              <li>About</li>
+              <li>
+                <form method="get" action="http://www.google.co.jp/search" target="_blank">
+                  <input class="search_window" value="" type="text"/>
+                  <input class="secrch_icon" name="btng" value="" type="submit"/>
+                  <input name="hl" value="ja" type="hidden"/>
+                </form>
+              </li>
+            </ul>
+          </nav>
         </div>
       </nav>
       <div class="headerwrap"><img src="material/rbhugram.svg"/>
@@ -71,45 +70,14 @@
           </div>
         </div>
       </div>
-      <div class="oldposts">
-        <div class="oldposts_post">
-          <div class="oldposts_post_title">
-            <h1>学校課題作品「積乱雲」</h1>
-            <hr/>
-          </div>
-          <div class="oldposts_post_image"><img src="material/image_7.jpg"/></div>
-        </div>
-        <div class="oldposts_post">
-          <div class="oldposts_post_title">
-            <h1>“Architecture Anomalies”ダニエル・アーシャム展示会webサイト制作課題</h1>
-            <hr/>
-          </div>
-          <div class="oldposts_post_image"><img src="material/image_2.jpg"/></div>
-        </div>
-        <div class="oldposts_post">
-          <div class="oldposts_post_title">
-            <h1>ROCK IN JAPAN 2018サイトリニューアル課題</h1>
-            <hr/>
-          </div>
-          <div class="oldposts_post_image"><img src="material/image_3.jpg"/></div>
-        </div>
-        <div class="oldposts_post">
-          <div class="oldposts_post_title">
-            <h1>学校課題作品「積乱雲」</h1>
-            <hr/>
-          </div>
-          <div class="oldposts_post_image"><img src="material/image_4.jpg"/></div>
-        </div>
-        <div class="oldposts_post">
-          <div class="oldposts_post_title">
-            <h1>学校課題作品「積乱雲」</h1>
-            <hr/>
-          </div>
-          <div class="oldposts_post_image"><img src="material/image_5.jpg"/></div>
-        </div>
+      <div class="oldposts" id="post">
+        <post></post>
+        <post></post>
+        <post></post>
       </div>
     </main>
   </body>
+  <script src="script/vue.min.js"></script>
   <script type="text/javascript" src="script/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="script/script.js"></script>
 </html>
