--- a/allpost.html
+++ b/allpost.html
@@ -55,26 +55,11 @@
       </div>
     </header>
     <main>
-      <div class="newpost">
-        <div class="newpost_backgreen"></div>
-        <div class="newpost_wrap">
-          <div class="newpost_symbol">
-            <p>New post</p>
-          </div>
-          <div class="newpost_view">
-            <div class="newpost_view_sentence">
-              <h1 class="title">これは一番新しい記事です</h1>
-              <p>一番新しい記事です......</p>
-            </div>
-            <div class="newpost_view_img"><img src="material/image_12.jpg"/></div>
-          </div>
-        </div>
-      </div>
-      <div class="oldposts" id="post">
-        <post></post>
-        <post></post>
-        <post></post>
-        <post></post>
+      <div id="allpost">
+        <div class="thumbnail"><a href="a" alt="a"><img src="material/image_1.jpg"/>
+            <div class="thumbnail_text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, culpa at voluptatem iste atque? Amet numquam, modi dolorem, dignissimos quo sed quam qui officia illum ipsum tempore, nostrum reprehenderit similique.</p>
+            </div></a></div>
       </div>
     </main>
   </body>
