--- a/section.html
+++ b/section.html
@@ -42,7 +42,7 @@
     <main>
       <div class="hide_top hide"></div>
       <div class="hide_bottom hide"></div>
-      <div class="sec_container">
+      <div class="sec_container" id="section">
         <div class="textbox contents_box">
           <div class="textbox_section"><h1>ES6のクラスについて</h1>
 <hr>
